--- a/css/Luxestate.css
+++ b/css/Luxestate.css
@@ -327,7 +327,7 @@ header nav .nav-links ul li a:hover {
     bottom: 61px;
     transform: rotate( -90deg);
     left: -55px;
-    padding-left: 40px;
+    padding-left: 34px;
     text-decoration: none;
     font-size: 15px;
     color: var(--second-font-color);
@@ -1086,7 +1086,7 @@ footer .top .subscribe form {
 footer .top .subscribe form input {
     height: 100%;
     outline: none;
-    width: calc(100%-80px);
+    width: calc(100% - 80px);
     border: none;
     padding: 10px 20px;
     caret-color: var(--font-color);
